--- a/footer.scss
+++ b/footer.scss
@@ -5,9 +5,9 @@
 @import url("https://ru.from.biz/theme.css");
 
 body {
-	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
+	min-height: 100vh;
 }
 
 /* Ниже стили только футера */
@@ -16,11 +16,11 @@ footer {
 }
 
 .f-bottom {
+	gap: 40px;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
 	align-items: center;
-	gap: 40px;
 
 	@media screen and (max-width: 1199px) {
 		justify-content: flex-start;
@@ -36,8 +36,8 @@ footer {
 }
 
 .f-bottom__link {
-	text-decoration: underline;
 	opacity: 0.5;
+	text-decoration: underline;
 
 	transition: all 0.25s;
 
@@ -52,8 +52,8 @@ footer {
 
 .f-bottom__copy {
 	@media screen and (max-width: 1199px) {
-		order: 2;
 		flex-grow: 1;
+		order: 2;
 		width: calc(50% - 40px / 2);
 	}
 
@@ -63,9 +63,9 @@ footer {
 }
 .f-bottom__celestra {
 	@media screen and (max-width: 1199px) {
-		order: 3;
 		flex-grow: 1;
 		align-self: flex-end;
+		order: 3;
 		width: calc(50% - 40px / 2);
 
 		text-align: right;
@@ -74,4 +74,183 @@ footer {
 	@media screen and (max-width: 767px) {
 		margin-top: 24px;
 	}
+}
+
+.f-grid {
+	gap: 65px;
+	grid-template-columns: 1fr 320px;
+	grid-template-rows: auto auto;
+	display: grid;
+
+	max-width: 100%;
+
+	@media screen and (max-width: 1199px) {
+		grid-template-columns: 1fr;
+		grid-template-rows: auto auto auto;
+	}
+}
+.f-logo {
+	gap: 24px;
+	grid-column: 1 / 2;
+	grid-row: 1 / 2;
+
+	display: flex;
+	align-items: center;
+
+	@media screen and (max-width: 380px) {
+		flex-direction: column;
+		align-items: flex-start;
+	}
+}
+.f-logo__img {
+	display: block;
+	width: auto;
+	height: 24px;
+}
+.f-logo__text {
+	font-size: 12px;
+	line-height: 1.2;
+}
+.f-nav {
+	gap: 16px;
+	grid-column: 1 / 2;
+	grid-row: 2 / 3;
+	display: flex;
+
+	flex-wrap: wrap;
+	justify-content: space-between;
+
+	@media screen and (max-width: 767px) {
+		gap: 0;
+		flex-direction: column;
+	}
+}
+.f-nav__item {
+	gap: 20px;
+	display: flex;
+	flex-direction: column;
+
+	&:nth-child(2) {
+		margin-right: -30px;
+
+		@media screen and (max-width: 767px) {
+			margin-right: initial;
+		}
+	}
+
+	@media screen and (max-width: 767px) {
+		padding-top: 18px;
+		padding-bottom: 18px;
+		border-top: 1px solid #292a2b;
+		border-bottom: 1px solid #292a2b;
+
+		&:first-child {
+			border-top: 0;
+		}
+
+		&:last-child {
+			border-bottom: 0;
+		}
+	}
+}
+.f-nav__link-box {
+	gap: 8px;
+	display: flex;
+	align-items: center;
+
+	@media screen and (max-width: 767px) {
+		justify-content: space-between;
+	}
+}
+.f-nav__link {
+	text-transform: uppercase;
+
+	@media screen and (max-width: 767px) {
+		font-size: 16px;
+	}
+}
+.f-nav__btn {
+	display: none;
+	font-size: 25px;
+
+	cursor: pointer;
+	transition: all 0.25s;
+
+	@media screen and (max-width: 767px) {
+		display: inline-flex;
+	}
+
+	&.toggle {
+		transform: rotate(45deg);
+	}
+}
+.f-nav__dropdown {
+	gap: 12px;
+	display: flex;
+	flex-direction: column;
+	overflow: hidden;
+
+	@media screen and (max-width: 767px) {
+		display: none;
+		opacity: 0;
+		height: 0;
+		transition: all 0.25s;
+
+		&.toggle {
+			display: flex;
+			opacity: 1;
+		}
+	}
+
+	a {
+		color: #7b7c7d;
+		font-weight: 500;
+		font-size: 13px;
+		line-height: 1.2;
+		text-transform: uppercase;
+		transition: all 0.25s;
+
+		&:hover {
+			color: #fff;
+		}
+	}
+}
+.f-info {
+	gap: 48px;
+	grid-column: 2 / 3;
+	grid-row: 1 / 3;
+
+	display: flex;
+
+	flex-direction: column;
+	max-width: 320px;
+
+	@media screen and (max-width: 1199px) {
+		gap: 24px;
+		grid-column: 1 / 2;
+
+		grid-row: 3 / 4;
+	}
+
+	@media screen and (max-width: 767px) {
+		max-width: initial;
+	}
+}
+
+.f-info__box {
+	display: inline-flex;
+	flex-wrap: wrap;
+	margin: 0;
+
+	.btn-outline {
+		border-radius: 1000px;
+	}
+}
+
+.f-info__text {
+	margin: 0;
+
+	color: #888989;
+	font-weight: 500;
+	line-height: 1.2;
 }
