--- a/css/footer.css
+++ b/css/footer.css
@@ -3,261 +3,284 @@
 @import url("https://from.biz/cdn/fonts/gilroy/stylesheet.css");
 @import url("https://from.biz/from/cdn/default/css/from-css.min.css");
 @import url("https://ru.from.biz/theme.css");
-
 body {
-	display: flex;
-	flex-direction: column;
-	min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 /* Ниже стили только футера */
-footer {
-	margin-top: auto;
+.footer {
+  margin-top: auto;
 }
 
 .f-bottom {
-	gap: 40px;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	align-items: center;
+  gap: 40px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  line-height: 1.2;
 }
 @media screen and (max-width: 1199px) {
-	.f-bottom {
-		justify-content: flex-start;
-	}
+  .f-bottom {
+    justify-content: flex-start;
+  }
 }
 @media screen and (max-width: 767px) {
-	.f-bottom {
-		gap: 16px;
-	}
+  .f-bottom {
+    gap: 16px;
+  }
 }
 .f-bottom span {
-	opacity: 0.5;
+  opacity: 0.5;
 }
 
 .f-bottom__link {
-	opacity: 0.5;
-	text-decoration: underline;
-	transition: all 0.25s;
+  opacity: 0.5;
+  text-decoration: underline;
+  transition: all 0.25s;
 }
 @media screen and (max-width: 767px) {
-	.f-bottom__link {
-		width: 100%;
-	}
+  .f-bottom__link {
+    width: 100%;
+  }
 }
 .f-bottom__link:hover {
-	opacity: 1;
+  opacity: 1;
 }
 
 @media screen and (max-width: 1199px) {
-	.f-bottom__copy {
-		flex-grow: 1;
-		order: 2;
-		width: calc(50% - 20px);
-	}
+  .f-bottom__copy {
+    flex-grow: 1;
+    order: 2;
+    width: calc(50% - 20px);
+  }
 }
 @media screen and (max-width: 767px) {
-	.f-bottom__copy {
-		margin-top: 24px;
-	}
+  .f-bottom__copy {
+    flex-grow: 1;
+    margin-top: 24px;
+  }
 }
 
 @media screen and (max-width: 1199px) {
-	.f-bottom__celestra {
-		flex-grow: 1;
-		align-self: flex-end;
-		order: 3;
-		width: calc(50% - 20px);
-		text-align: right;
-	}
+  .f-bottom__celestra {
+    align-self: flex-end;
+    order: 3;
+    width: calc(50% - 20px);
+    text-align: right;
+  }
 }
 @media screen and (max-width: 767px) {
-	.f-bottom__celestra {
-		margin-top: 24px;
-	}
+  .f-bottom__celestra {
+    margin-top: 24px;
+  }
 }
 
 .f-grid {
-	gap: 65px;
-	grid-template-columns: 1fr 320px;
-	grid-template-rows: auto auto;
-	display: grid;
-	max-width: 100%;
+  gap: 65px;
+  grid-template-columns: 1fr 320px;
+  grid-template-rows: auto auto;
+  display: grid;
+  max-width: 100%;
 }
 @media screen and (max-width: 1199px) {
-	.f-grid {
-		grid-template-columns: 1fr;
-		grid-template-rows: auto auto auto;
-	}
+  .f-grid {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto;
+  }
+}
+@media screen and (max-width: 767px) {
+  .f-grid {
+    gap: 64px;
+  }
 }
 
 .f-logo {
-	gap: 24px;
-	grid-column: 1/2;
-	grid-row: 1/2;
-	display: flex;
-	align-items: center;
+  gap: 24px;
+  grid-column: 1/2;
+  grid-row: 1/2;
+  display: flex;
+  align-items: center;
 }
 @media screen and (max-width: 380px) {
-	.f-logo {
-		flex-direction: column;
-		align-items: flex-start;
-	}
+  .f-logo {
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
 
 .f-logo__img {
-	display: block;
-	width: auto;
-	height: 24px;
+  display: block;
+  width: auto;
+  height: 24px;
 }
 
 .f-logo__text {
-	font-size: 12px;
-	line-height: 1.2;
+  font-size: 12px;
+  line-height: 1.2;
 }
 
 .f-nav {
-	gap: 16px;
-	grid-column: 1/2;
-	grid-row: 2/3;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
+  gap: 16px;
+  grid-column: 1/2;
+  grid-row: 2/3;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 @media screen and (max-width: 767px) {
-	.f-nav {
-		gap: 0;
-		flex-direction: column;
-	}
+  .f-nav {
+    gap: 0;
+    flex-direction: column;
+  }
 }
 
 .f-nav__item {
-	gap: 20px;
-	display: flex;
-	flex-direction: column;
+  gap: 20px;
+  display: flex;
+  flex-direction: column;
+}
+@media screen and (max-width: 767px) {
+  .f-nav__item {
+    gap: 16px;
+  }
 }
 .f-nav__item:nth-child(2) {
-	margin-right: -30px;
+  margin-right: -30px;
 }
 @media screen and (max-width: 767px) {
-	.f-nav__item:nth-child(2) {
-		margin-right: initial;
-	}
+  .f-nav__item:nth-child(2) {
+    margin-right: initial;
+  }
 }
 @media screen and (max-width: 767px) {
-	.f-nav__item {
-		padding-top: 18px;
-		padding-bottom: 18px;
-		border-top: 1px solid #292a2b;
-		border-bottom: 1px solid #292a2b;
-	}
-	.f-nav__item:first-child {
-		border-top: 0;
-	}
-	.f-nav__item:last-child {
-		border-bottom: 0;
-	}
+  .f-nav__item {
+    padding-top: 18px;
+    padding-bottom: 18px;
+    border-top: 1px solid #292a2b;
+    border-bottom: 1px solid #292a2b;
+  }
+  .f-nav__item:first-child {
+    border-top: 0;
+  }
+  .f-nav__item:last-child {
+    border-bottom: 0;
+  }
 }
 
 .f-nav__link-box {
-	gap: 8px;
-	display: flex;
-	align-items: center;
+  gap: 8px;
+  display: flex;
+  align-items: center;
 }
 @media screen and (max-width: 767px) {
-	.f-nav__link-box {
-		justify-content: space-between;
-	}
+  .f-nav__link-box {
+    justify-content: space-between;
+  }
 }
 
 .f-nav__link {
-	text-transform: uppercase;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.2;
+  text-transform: uppercase;
 }
 @media screen and (max-width: 767px) {
-	.f-nav__link {
-		font-size: 16px;
-	}
+  .f-nav__link {
+    font-size: 16px;
+  }
 }
 
 .f-nav__btn {
-	display: none;
-	font-size: 25px;
-	cursor: pointer;
-	transition: all 0.25s;
+  display: none;
+  font-size: 25px;
+  cursor: pointer;
+  transition: all 0.25s;
 }
 @media screen and (max-width: 767px) {
-	.f-nav__btn {
-		display: inline-flex;
-	}
+  .f-nav__btn {
+    display: inline-flex;
+  }
 }
 .f-nav__btn.toggle {
-	transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 
 .f-nav__dropdown {
-	gap: 12px;
-	display: flex;
-	flex-direction: column;
-	overflow: hidden;
+  gap: 12px;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
 }
 @media screen and (max-width: 767px) {
-	.f-nav__dropdown {
-		display: none;
-		opacity: 0;
-		height: 0;
-		transition: all 0.25s;
-	}
-	.f-nav__dropdown.toggle {
-		display: flex;
-		opacity: 1;
-	}
+  .f-nav__dropdown {
+    display: none;
+    opacity: 0;
+    height: 0;
+    transition: all 0.25s;
+  }
+  .f-nav__dropdown.toggle {
+    display: flex;
+    opacity: 1;
+  }
 }
 .f-nav__dropdown a {
-	color: #7b7c7d;
-	font-weight: 500;
-	font-size: 13px;
-	line-height: 1.2;
-	text-transform: uppercase;
-	transition: all 0.25s;
+  color: #7b7c7d;
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 1.2;
+  text-transform: uppercase;
+  transition: all 0.25s;
 }
 .f-nav__dropdown a:hover {
-	color: #fff;
+  color: #fff;
 }
 
 .f-info {
-	gap: 48px;
-	grid-column: 2/3;
-	grid-row: 1/3;
-	display: flex;
-	flex-direction: column;
-	max-width: 320px;
+  gap: 48px;
+  grid-column: 2/3;
+  grid-row: 1/3;
+  display: flex;
+  flex-direction: column;
+  max-width: 320px;
 }
 @media screen and (max-width: 1199px) {
-	.f-info {
-		gap: 24px;
-		grid-column: 1/2;
-		grid-row: 3/4;
-	}
+  .f-info {
+    gap: 24px;
+    grid-column: 1/2;
+    grid-row: 3/4;
+  }
 }
 @media screen and (max-width: 767px) {
-	.f-info {
-		max-width: initial;
-	}
+  .f-info {
+    max-width: initial;
+  }
 }
 
 .f-info__box {
-	display: inline-flex;
-	flex-wrap: wrap;
-	margin: 0;
+  display: inline-flex;
+  flex-wrap: wrap;
+  margin: 0;
 }
 .f-info__box .btn-outline {
-	border-radius: 1000px;
+  border-radius: 1000px;
 }
 
 .f-info__text {
-	margin: 0;
-	color: #888989;
-	font-weight: 500;
-	line-height: 1.2;
+  margin: 0;
+  color: #888989;
+  font-weight: 500;
+  line-height: 1.2;
+}
+
+.btn.btn-sm {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer .section-buttons .btn:last-child {
+  margin-right: 0;
 }
