--- a/footer.scss
+++ b/footer.scss
@@ -11,7 +11,7 @@ body {
 }
 
 /* Ниже стили только футера */
-footer {
+.footer {
 	margin-top: auto;
 }
 
@@ -21,6 +21,8 @@ footer {
 	flex-wrap: wrap;
 	justify-content: space-between;
 	align-items: center;
+
+	line-height: 1.2;
 
 	@media screen and (max-width: 1199px) {
 		justify-content: flex-start;
@@ -58,12 +60,13 @@ footer {
 	}
 
 	@media screen and (max-width: 767px) {
+		flex-grow: 1;
 		margin-top: 24px;
 	}
 }
 .f-bottom__celestra {
 	@media screen and (max-width: 1199px) {
-		flex-grow: 1;
+		// flex-grow: 1;
 		align-self: flex-end;
 		order: 3;
 		width: calc(50% - 40px / 2);
@@ -87,6 +90,10 @@ footer {
 	@media screen and (max-width: 1199px) {
 		grid-template-columns: 1fr;
 		grid-template-rows: auto auto auto;
+	}
+
+	@media screen and (max-width: 767px) {
+		gap: 64px;
 	}
 }
 .f-logo {
@@ -130,6 +137,10 @@ footer {
 	display: flex;
 	flex-direction: column;
 
+	@media screen and (max-width: 767px) {
+		gap: 16px;
+	}
+
 	&:nth-child(2) {
 		margin-right: -30px;
 
@@ -163,6 +174,9 @@ footer {
 	}
 }
 .f-nav__link {
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 1.2;
 	text-transform: uppercase;
 
 	@media screen and (max-width: 767px) {
@@ -253,4 +267,17 @@ footer {
 	color: #888989;
 	font-weight: 500;
 	line-height: 1.2;
+}
+.btn.btn-sm {
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.section-buttons .btn {
+	.footer & {
+		&:last-child {
+			margin-right: 0;
+		}
+	}
 }
